src/other/mico-2.3.12/test/idl/error/expected-stderr-case5.idl
case5.idl:11: bad kind of recursion in constructed type 'u'
